@@ -110,11 +110,12 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.server.ResponseStatusException;
-import javax.persistence.EntityNotFoundException;
+import jakarta.persistence.EntityNotFoundException;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -126,7 +127,6 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
-
 import static greencity.constant.ErrorMessage.BAG_NOT_FOUND;
 import static greencity.constant.ErrorMessage.EMPLOYEE_NOT_FOUND;
 import static greencity.constant.ErrorMessage.INCORRECT_ECO_NUMBER;
@@ -434,7 +434,6 @@ public class UBSManagementServiceImpl implements UBSManagementService {
      *
      * @param address {@link Address}.
      * @return {@link AddressExportDetailsDto}.
-     *
      * @author Yuriy Bahlay.
      */
     private AddressExportDetailsDto getAddressDtoForAdminPage(OrderAddress address) {
@@ -466,7 +465,6 @@ public class UBSManagementServiceImpl implements UBSManagementService {
      *
      * @param order {@link Order}.
      * @return {@link GeneralOrderInfo}.
-     *
      * @author Yuriy Bahlay.
      */
     private GeneralOrderInfo getInfoAboutStatusesAndDateFormed(Optional<Order> order) {
@@ -506,7 +504,6 @@ public class UBSManagementServiceImpl implements UBSManagementService {
      * ua and en.
      *
      * @return {@link List}.
-     *
      * @author Yuriy Bahlay.
      */
     private List<OrderStatusesTranslationDto> getOrderStatusesTranslation() {
@@ -538,7 +535,6 @@ public class UBSManagementServiceImpl implements UBSManagementService {
      *
      * @param orderStatusTranslation      {@link OrderStatusTranslation}.
      * @param orderStatusesTranslationDto {@link OrderStatusesTranslationDto}.
-     *
      * @author Yuriy Bahlay.
      */
     private void setValueForOrderStatusIsNotTakenOutOrDoneOrCancelledAsTrue(
@@ -554,7 +550,6 @@ public class UBSManagementServiceImpl implements UBSManagementService {
      * This is method which is get order payment statuses translation.
      *
      * @return {@link List}.
-     *
      * @author Yuriy Bahlay.
      */
     private List<OrderPaymentStatusesTranslationDto> getOrderPaymentStatusesTranslation() {
@@ -618,7 +613,6 @@ public class UBSManagementServiceImpl implements UBSManagementService {
                 orderDetailRepository
                     .updateConfirm(entry.getValue(), orderId,
                         entry.getKey().longValue());
-                orderDetailRepository.deleteIfConfirmedQuantityIsZero(orderId, entry.getKey().longValue());
             }
         }
 
@@ -632,7 +626,6 @@ public class UBSManagementServiceImpl implements UBSManagementService {
                 orderDetailRepository
                     .updateExporter(entry.getValue(), orderId,
                         entry.getKey().longValue());
-                orderDetailRepository.deleteIfExportedQuantityIsZero(orderId, entry.getKey().longValue());
             }
         }
 
@@ -648,25 +641,30 @@ public class UBSManagementServiceImpl implements UBSManagementService {
         Long orderId = order.getId();
 
         if (needToPayInCoins == 0) {
+            order.setOrderPaymentStatus(OrderPaymentStatus.PAID);
             orderRepository.updateOrderPaymentStatus(orderId, OrderPaymentStatus.PAID.name());
             return;
         }
         if (totalPriceInCoins - wasPaidInCoins >= 0 && needToPayInCoins < 0) {
+            order.setOrderPaymentStatus(OrderPaymentStatus.PAID);
             orderRepository.updateOrderPaymentStatus(orderId, OrderPaymentStatus.PAID.name());
             recalculateCertificates(totalPriceInCoins - wasPaidInCoins, order);
             return;
         }
         if (totalPriceInCoins < wasPaidInCoins) {
+            order.setOrderPaymentStatus(OrderPaymentStatus.PAID);
             orderRepository.updateOrderPaymentStatus(orderId, OrderPaymentStatus.PAID.name());
             recalculateCertificates(0L, order);
             return;
         }
         if (needToPayInCoins > 0 && wasPaidInCoins + discountInCoins != 0) {
+            order.setOrderPaymentStatus(OrderPaymentStatus.HALF_PAID);
             orderRepository.updateOrderPaymentStatus(orderId, OrderPaymentStatus.HALF_PAID.name());
             notificationService.notifyHalfPaidPackage(order);
             return;
         }
         if (wasPaidInCoins + discountInCoins == 0) {
+            order.setOrderPaymentStatus(OrderPaymentStatus.UNPAID);
             orderRepository.updateOrderPaymentStatus(orderId, OrderPaymentStatus.UNPAID.name());
         }
     }
@@ -826,7 +824,7 @@ public class UBSManagementServiceImpl implements UBSManagementService {
         CounterOrderDetailsDto dto = new CounterOrderDetailsDto();
         Order order = orderRepository.getOrderDetails(id)
             .orElseThrow(() -> new NotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST + id));
-        List<Bag> bag = orderBagService.findAllBagsInOrderBagsList(orderBagRepository.findOrderBagsByOrderId(id));
+        List<Bag> bag = orderBagService.findAllBagsInOrderBagsList(order.getOrderBags());
         final List<Certificate> currentCertificate = certificateRepository.findCertificate(id);
 
         long sumAmountInCoins = 0;
@@ -980,7 +978,7 @@ public class UBSManagementServiceImpl implements UBSManagementService {
         if (payment.isEmpty()) {
             throw new NotFoundException(PAYMENT_NOT_FOUND + id);
         }
-        return buildStatuses(order, payment.get(0));
+        return buildStatuses(order, payment.getFirst());
     }
 
     /**
@@ -1030,6 +1028,7 @@ public class UBSManagementServiceImpl implements UBSManagementService {
                 eventService.saveEvent(OrderHistory.ORDER_DONE, email, order);
             } else if (order.getOrderStatus() == OrderStatus.BROUGHT_IT_HIMSELF) {
                 eventService.saveEvent(OrderHistory.ORDER_BROUGHT_IT_HIMSELF, email, order);
+                notificationService.notifySelfPickupOrder(order);
             } else if (order.getOrderStatus() == OrderStatus.ON_THE_ROUTE) {
                 eventService.saveEvent(OrderHistory.ORDER_ON_THE_ROUTE, email, order);
             }
@@ -1040,7 +1039,7 @@ public class UBSManagementServiceImpl implements UBSManagementService {
             paymentRepository.saveAll(payment);
         }
 
-        return buildStatuses(order, payment.get(0));
+        return buildStatuses(order, payment.getFirst());
     }
 
     private void verifyPaidWithBonuses(Order order, String email) {
@@ -1607,7 +1606,7 @@ public class UBSManagementServiceImpl implements UBSManagementService {
             && !added.contains("")) {
             historyChanges.append(collectInfoAboutChangesOfEcoNumber(added, OrderHistory.ADD_NEW_ECO_NUMBER));
             added.forEach(newNumber -> {
-                if (!newNumber.matches("[0-9]+") || newNumber.length() != 10) {
+                if (!newNumber.matches("\\d{4,10}")) {
                     throw new BadRequestException(INCORRECT_ECO_NUMBER);
                 }
                 order.getAdditionalOrders().add(newNumber);
@@ -1680,7 +1679,6 @@ public class UBSManagementServiceImpl implements UBSManagementService {
      * @param language                {@link String}.
      * @param email                   {@link String}.
      * @param images                  {@link MultipartFile}.
-     *
      * @author Anton Bondar.
      */
     @Override
@@ -1689,18 +1687,8 @@ public class UBSManagementServiceImpl implements UBSManagementService {
         String language, String email, MultipartFile[] images) {
         Order order = orderRepository.findById(orderId)
             .orElseThrow(() -> new NotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST + orderId));
-        PaymentTableInfoDto paymentTableInfoDto = getPaymentTableInfo(orderId);
-        Double unPaidAmount = paymentTableInfoDto.getUnPaidAmount();
-        if (Double.compare(unPaidAmount, 0.0) != 0 && order.getOrderPaymentStatus().equals(OrderPaymentStatus.PAID)) {
-            order.setOrderPaymentStatus(OrderPaymentStatus.HALF_PAID);
-        }
         updateOrderAdminPageInfo(updateOrderPageAdminDto, order, language, email);
         saveReason(order, updateOrderPageAdminDto.getNotTakenOutReason(), images);
-    }
-
-    private PaymentTableInfoDto getPaymentTableInfo(Long orderId) {
-        CounterOrderDetailsDto prices = getPriceDetails(orderId);
-        return getPaymentInfo(orderId, setTotalPrice(prices));
     }
 
     /**
@@ -1803,7 +1791,7 @@ public class UBSManagementServiceImpl implements UBSManagementService {
     private void checkUpdateResponsibleEmployeeDto(UpdateAllOrderPageDto updateAllOrderPageDto, Order order,
         String email) {
         if (nonNull(updateAllOrderPageDto.getUpdateResponsibleEmployeeDto())) {
-            updateAllOrderPageDto.getUpdateResponsibleEmployeeDto().stream()
+            updateAllOrderPageDto.getUpdateResponsibleEmployeeDto()
                 .forEach(dto -> {
                     if (nonNull(dto.getEmployeeId()) && nonNull(dto.getPositionId())) {
                         ordersAdminsPageService.responsibleEmployee(List.of(order.getId()),
@@ -1877,7 +1865,7 @@ public class UBSManagementServiceImpl implements UBSManagementService {
     public void updateOrderStatusToExpected() {
         orderRepository.updateOrderStatusToExpected(OrderStatus.CONFIRMED.name(),
             OrderStatus.ON_THE_ROUTE.name(),
-            LocalDate.now());
+            LocalDate.now(ZoneId.of("Europe/Kiev")));
     }
 
     @Override
