@@ -228,7 +228,8 @@ public class ModelUtils {
     public static final UserNotification TEST_USER_NOTIFICATION_3 = createUserNotificationForViolation();
     public static final UserNotification TEST_USER_NOTIFICATION_4 = createUserNotification4();
     public static final UserNotification TEST_USER_NOTIFICATION_5 = createUserNotification5();
-    public static final NotificationParameter TEST_NOTIFICATION_PARAMETER = createNotificationParameter();
+    public static final UserNotification TEST_USER_NOTIFICATION_6 = createUserNotificationForViolation6();
+    public static final UserNotification TEST_USER_NOTIFICATION_7 = createUserNotificationForViolation7();
     public static final Violation TEST_VIOLATION = createTestViolation();
     public static final NotificationTemplate TEST_NOTIFICATION_TEMPLATE = createNotificationTemplate();
     public static final NotificationTemplateDto TEST_NOTIFICATION_TEMPLATE_DTO = createNotificationTemplateDto();
@@ -328,32 +329,6 @@ public class ModelUtils {
         return getEmployeeDto;
     }
 
-    public static GetEmployeeDto getEmployeeDtoWithPositionsForGetAllMethod() {
-        var getEmployeeDto = getEmployeeDto();
-        getEmployeeDto.setEmployeePositions(List.of(
-            getPositionDto(3L),
-            getPositionDto(5L),
-            getPositionDto(7L)));
-        getEmployeeDto.setTariffs(new ArrayList<>());
-        return getEmployeeDto;
-    }
-
-    public static GetEmployeeDto getEmployeeDtoWithPositionsAndTariffs() {
-        var getEmployeeDto = getEmployeeDto();
-
-        getEmployeeDto.setEmployeePositions(List.of(
-            getPositionDto(3L),
-            getPositionDto(5L),
-            getPositionDto(7L)));
-
-        var getTariffInfoForEmployeeDto = getTariffInfoForEmployeeDto2();
-        getTariffInfoForEmployeeDto.setLocationsDtos(List.of(getLocationsDtos(30L)));
-        getTariffInfoForEmployeeDto.setReceivingStationDtos(List.of(getReceivingStationDto2()));
-        getEmployeeDto.setTariffs(List.of(getTariffInfoForEmployeeDto));
-
-        return getEmployeeDto;
-    }
-
     public static GetEmployeeDto getEmployeeDto() {
         return GetEmployeeDto.builder()
             .id(1L)
@@ -376,7 +351,7 @@ public class ModelUtils {
     public static GetTariffInfoForEmployeeDto getTariffInfoForEmployeeDto2() {
         return GetTariffInfoForEmployeeDto.builder()
             .id(10L)
-            .region(getRegionDto(15L))
+            .region(getRegionDto())
             .courier(getCourierTranslationDto(20L))
             .build();
     }
@@ -502,7 +477,7 @@ public class ModelUtils {
             .build();
     }
 
-    public static UBSuser getUBSuserWtihoutOrderAddress() {
+    public static UBSuser getUBSuserWithoutOrderAddress() {
         return UBSuser.builder()
             .firstName("oleh")
             .lastName("ivanov")
@@ -567,6 +542,7 @@ public class ModelUtils {
     public static Order getOrder() {
         return Order.builder()
             .id(1L)
+            .orderDate(LocalDateTime.of(2023, 10, 20, 14, 58))
             .payment(Lists.newArrayList(Payment.builder()
                 .id(1L)
                 .paymentId("1")
@@ -670,21 +646,6 @@ public class ModelUtils {
             .imageReasonNotTakingBags(List.of("foto"))
             .orderPaymentStatus(OrderPaymentStatus.UNPAID)
             .additionalOrders(new HashSet<>(Arrays.asList("1111111111", "2222222222")))
-            .build();
-    }
-
-    public static Order getOrderWithoutAddress() {
-        return Order.builder()
-            .id(1L)
-            .counterOrderPaymentId(0L)
-            .ubsUser(UBSuser.builder()
-                .firstName("oleh")
-                .lastName("ivanov")
-                .email("mail@mail.ua")
-                .id(1L)
-                .phoneNumber("067894522")
-                .build())
-            .user(User.builder().id(1L).recipientName("Yuriy").recipientSurname("Gerasum").build())
             .build();
     }
 
@@ -1398,46 +1359,9 @@ public class ModelUtils {
             .build();
     }
 
-    public static GetEmployeeDto getGetEmployeeDto() {
-        return GetEmployeeDto
-            .builder()
-            .id(1L)
-            .firstName("Петро")
-            .lastName("Петренко")
-            .phoneNumber("+380935577455")
-            .email("test@gmail.com")
-            .image("path")
-            .employeePositions(List.of(PositionDto.builder()
-                .id(1L)
-                .name("Водій")
-                .nameEn("Driver")
-                .build()))
-            .tariffs(List.of(GetTariffInfoForEmployeeDto.builder()
-                .id(1L)
-                .region(getRegionDto(1L))
-                .locationsDtos(List.of(LocationsDtos
-                    .builder()
-                    .locationId(1L)
-                    .nameEn("Kyiv")
-                    .nameUk("Київ")
-                    .build()))
-                .receivingStationDtos(List.of(GetReceivingStationDto
-                    .builder()
-                    .stationId(1L)
-                    .name("Петрівка")
-                    .build()))
-                .courier(CourierTranslationDto.builder()
-                    .id(1L)
-                    .nameUk("Тест")
-                    .nameEn("Test")
-                    .build())
-                .build()))
-            .build();
-    }
-
-    private static RegionDto getRegionDto(Long id) {
+    private static RegionDto getRegionDto() {
         return RegionDto.builder()
-            .regionId(id)
+            .regionId(15L)
             .nameEn("Kyiv region")
             .nameUk("Київська область")
             .build();
@@ -1837,7 +1761,7 @@ public class ModelUtils {
         LocationDto locationDto1 = LocationDto.builder()
             .locationNameMap(Map.of("name", "Вінниця", "name_en", "Vinnytsa"))
             .build();
-        return Arrays.asList(locationDto1);
+        return singletonList(locationDto1);
     }
 
     public static DistrictDto getDistrictDto() {
@@ -1867,7 +1791,7 @@ public class ModelUtils {
             .cityEn("CityEng")
             .streetEn("StreetEng")
             .districtEn("DistinctEng")
-            .addressRegionDistrictList(Arrays.asList(getDistrictDto()))
+            .addressRegionDistrictList(singletonList(getDistrictDto()))
             .build();
     }
 
@@ -1910,14 +1834,6 @@ public class ModelUtils {
             .build();
     }
 
-    public static Position getPosition(Long id) {
-        return Position.builder()
-            .id(id)
-            .name("Водій")
-            .nameEn("Driver")
-            .build();
-    }
-
     public static PositionDto getPositionDto(Long id) {
         return PositionDto.builder()
             .id(id)
@@ -1949,7 +1865,7 @@ public class ModelUtils {
     public static Violation getViolation() {
         LocalDateTime localdatetime = LocalDateTime.of(
             2021, Month.MARCH,
-            16, 13, 00, 00);
+            16, 13, 0, 0);
         return Violation.builder()
             .id(1L)
             .order(Order.builder()
@@ -1965,7 +1881,7 @@ public class ModelUtils {
     public static Violation getViolation2() {
         LocalDateTime localdatetime = LocalDateTime.of(
             2021, Month.MARCH,
-            16, 13, 00, 00);
+            16, 13, 0, 0);
         return Violation.builder()
             .id(1L)
             .order(Order.builder()
@@ -1980,7 +1896,7 @@ public class ModelUtils {
     public static ViolationDetailInfoDto getViolationDetailInfoDto() {
         LocalDateTime localdatetime = LocalDateTime.of(
             2021, Month.MARCH,
-            16, 13, 00, 00);
+            16, 13, 0, 0);
         return ViolationDetailInfoDto.builder()
             .orderId(1L)
             .addedByUser("Alan Po")
@@ -2006,21 +1922,6 @@ public class ModelUtils {
             .id(1L)
             .paymentStatus(PaymentStatus.PAID)
             .amount(95000L)
-            .currency("UAH")
-            .orderStatus("approved")
-            .responseStatus("approved")
-            .order(getOrder())
-            .paymentId("1")
-            .settlementDate(LocalDate.now().toString())
-            .fee(0L)
-            .build();
-    }
-
-    public static Payment getPayment2() {
-        return Payment.builder()
-            .id(1L)
-            .paymentStatus(PaymentStatus.PAID)
-            .amount(0L)
             .currency("UAH")
             .orderStatus("approved")
             .responseStatus("approved")
@@ -2173,7 +2074,7 @@ public class ModelUtils {
         return Order.builder()
             .id(1L)
             .events(List.of(new Event(1L, LocalDateTime.now(),
-                "Roman", "Roman", new Order())))
+                "Roman", "Roman", "Roman", "Roman", new Order())))
             .orderStatus(OrderStatus.FORMED)
             .payment(singletonList(Payment.builder()
                 .id(1L)
@@ -2195,7 +2096,7 @@ public class ModelUtils {
         return Order.builder()
             .id(1L)
             .events(List.of(new Event(1L, LocalDateTime.now(),
-                "Roman", "Roman", new Order())))
+                "Roman", "Roman", "Roman", "Roman", new Order())))
             .orderStatus(OrderStatus.CANCELED)
             .payment(singletonList(Payment.builder()
                 .id(1L)
@@ -2217,7 +2118,7 @@ public class ModelUtils {
         return Order.builder()
             .id(1L)
             .events(List.of(new Event(1L, LocalDateTime.now(),
-                "Roman", "Roman", new Order())))
+                "Roman", "Roman", "Roman", "Roman", new Order())))
             .orderStatus(OrderStatus.ADJUSTMENT)
             .payment(singletonList(Payment.builder()
                 .id(1L)
@@ -2239,7 +2140,7 @@ public class ModelUtils {
         return Order.builder()
             .id(1L)
             .events(List.of(new Event(1L, LocalDateTime.now(),
-                "Roman", "Roman", new Order())))
+                "Roman", "Roman", "Roman", "Roman", new Order())))
             .orderStatus(OrderStatus.FORMED)
             .payment(singletonList(Payment.builder()
                 .id(1L)
@@ -2261,7 +2162,7 @@ public class ModelUtils {
         return Order.builder()
             .id(1L)
             .events(List.of(new Event(1L, LocalDateTime.now(),
-                "Roman", "Roman", new Order())))
+                "Roman", "Roman", "Roman", "Roman", new Order())))
             .orderStatus(OrderStatus.CANCELED)
             .payment(singletonList(Payment.builder()
                 .id(1L)
@@ -2392,7 +2293,7 @@ public class ModelUtils {
 
         return OrderDetailStatusDto.builder()
             .orderStatus(TEST_ORDER.getOrderStatus().name())
-            .paymentStatus(TEST_PAYMENT_LIST.get(0).getPaymentStatus().name())
+            .paymentStatus(TEST_PAYMENT_LIST.getFirst().getPaymentStatus().name())
             .date(orderDate)
             .build();
     }
@@ -2585,21 +2486,21 @@ public class ModelUtils {
         return NotificationTemplateWithPlatformsUpdateDto.builder()
             .notificationTemplateMainInfoDto(createNotificationTemplateMainInfoDto())
             .platforms(List.of(
-                createNotificationPlatformDto(SITE)))
+                createNotificationPlatformDto()))
             .build();
     }
 
     private static NotificationTemplateWithPlatformsDto createNotificationTemplateWithPlatformsDto() {
         return NotificationTemplateWithPlatformsDto.builder()
             .notificationTemplateMainInfoDto(createNotificationTemplateMainInfoDto())
-            .platforms(List.of(createNotificationPlatformDto(SITE)))
+            .platforms(List.of(createNotificationPlatformDto()))
             .build();
     }
 
-    private static NotificationPlatformDto createNotificationPlatformDto(NotificationReceiverType receiverType) {
+    private static NotificationPlatformDto createNotificationPlatformDto() {
         return NotificationPlatformDto.builder()
             .id(1L)
-            .receiverType(receiverType)
+            .receiverType(SITE)
             .nameEng("NameEng")
             .body("Body")
             .bodyEng("BodyEng")
@@ -2676,13 +2577,6 @@ public class ModelUtils {
         return Violation.builder().description("violation description").build();
     }
 
-    private static NotificationParameter createNotificationParameter() {
-        return NotificationParameter.builder()
-            .key("violationDescription")
-            .value("violation description")
-            .build();
-    }
-
     private static Order createTestOrder4() {
         return Order.builder().id(46L).user(User.builder().id(42L).build())
             .orderDate(LocalDateTime.now())
@@ -2698,6 +2592,24 @@ public class ModelUtils {
     public static UserNotification createUserNotificationForViolation() {
         UserNotification userNotification = new UserNotification();
         userNotification.setNotificationType(NotificationType.VIOLATION_THE_RULES);
+        userNotification.setUser(TEST_ORDER_4.getUser());
+        userNotification.setOrder(TEST_ORDER_4);
+
+        return userNotification;
+    }
+
+    public static UserNotification createUserNotificationForViolation6() {
+        UserNotification userNotification = new UserNotification();
+        userNotification.setNotificationType(NotificationType.CHANGED_IN_RULE_VIOLATION_STATUS);
+        userNotification.setUser(TEST_ORDER_4.getUser());
+        userNotification.setOrder(TEST_ORDER_4);
+
+        return userNotification;
+    }
+
+    public static UserNotification createUserNotificationForViolation7() {
+        UserNotification userNotification = new UserNotification();
+        userNotification.setNotificationType(NotificationType.CANCELED_VIOLATION_THE_RULES_BY_THE_MANAGER);
         userNotification.setUser(TEST_ORDER_4.getUser());
         userNotification.setOrder(TEST_ORDER_4);
 
@@ -2995,18 +2907,6 @@ public class ModelUtils {
 
     }
 
-    public static OrderBag getEditedOrderBag() {
-        return OrderBag.builder()
-            .id(1L)
-            .amount(1)
-            .price(150_00L)
-            .capacity(20)
-            .name("Бавовняна сумка")
-            .bag(getBag())
-            .order(getOrder())
-            .build();
-    }
-
     public static Location getLocation() {
         return Location.builder()
             .id(1L)
@@ -3264,36 +3164,6 @@ public class ModelUtils {
                 .capacity(10)
                 .commission(21_00L)
                 .fullPrice(21_00L)
-                .build());
-    }
-
-    public static List<Bag> getBag2list() {
-        return List.of(Bag.builder()
-            .status(BagStatus.ACTIVE)
-            .id(1)
-            .price(100_00L)
-            .capacity(10)
-            .commission(20_00L)
-            .fullPrice(120_00L)
-            .build());
-    }
-
-    public static List<Bag> getBag3list() {
-        return List.of(Bag.builder()
-            .status(BagStatus.ACTIVE)
-            .id(1)
-            .price(100_00L)
-            .capacity(10)
-            .commission(21_00L)
-            .fullPrice(2000_00L)
-            .build(),
-            Bag.builder()
-                .status(BagStatus.ACTIVE)
-                .id(2)
-                .price(100_00L)
-                .capacity(10)
-                .commission(20_00L)
-                .fullPrice(120_00L)
                 .build());
     }
 
@@ -4081,7 +3951,7 @@ public class ModelUtils {
             .build();
     }
 
-    public static Order getOrdersStatusCanseledDto() {
+    public static Order getOrdersStatusCanceledDto() {
         return Order.builder()
             .id(1L)
             .payment(List.of(Payment.builder().id(1L).build()))
@@ -4491,12 +4361,13 @@ public class ModelUtils {
     }
 
     public static String getSuccessfulFondyResponse() {
-        return "{\n" +
-            "  \"response\":{\n" +
-            "    \"response_status\":\"success\",\n" +
-            "    \"checkout_url\":\"https://pay.fondy.eu/checkout?token=afcb21aef707b1fea2565b66bac7dc41d7833390\"\n" +
-            "  }\n" +
-            "}";
+        return """
+            {
+              "response":{
+                "response_status":"success",
+                "checkout_url":"https://pay.fondy.eu/checkout?token=afcb21aef707b1fea2565b66bac7dc41d7833390"
+              }
+            }""";
     }
 
     public static List<GeocodingResult> getGeocodingResultWithKyivRegion() {
