@@ -5,7 +5,6 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.junit.jupiter.MockitoExtension;
-
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 @ExtendWith(MockitoExtension.class)
@@ -17,11 +16,11 @@ class NotificationTemplateWithPlatformsDtoMapperTest {
     @Test
     void convert() {
         var notification = ModelUtils.TEST_NOTIFICATION_TEMPLATE;
-        var platform = notification.getNotificationPlatforms().get(0);
+        var platform = notification.getNotificationPlatforms().getFirst();
 
         var dto = notificationTemplateWithPlatformsDtoMapper.convert(notification);
         var mainInfoDto = dto.getNotificationTemplateMainInfoDto();
-        var platformDto = dto.getPlatforms().get(0);
+        var platformDto = dto.getPlatforms().getFirst();
 
         assertEquals(notification.getNotificationType(), mainInfoDto.getType());
         assertEquals(notification.getTrigger(), mainInfoDto.getTrigger());
