@@ -34,7 +34,6 @@ import greencity.dto.payment.PaymentInfoDto;
 import greencity.dto.user.AddBonusesToUserDto;
 import greencity.dto.user.AddingPointsToUserDto;
 import greencity.dto.violation.ViolationsInfoDto;
-import greencity.entity.order.Bag;
 import greencity.entity.order.Certificate;
 import greencity.entity.order.Order;
 import greencity.entity.order.OrderPaymentStatusTranslation;
@@ -80,6 +79,7 @@ import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.MockedStatic;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.modelmapper.ModelMapper;
@@ -92,11 +92,11 @@ import org.springframework.data.domain.Sort;
 import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.server.ResponseStatusException;
-
-import javax.persistence.EntityNotFoundException;
+import jakarta.persistence.EntityNotFoundException;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
+import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -107,7 +107,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Stream;
-
 import static greencity.ModelUtils.ORDER_DETAIL_STATUS_DTO;
 import static greencity.ModelUtils.TEST_ADDITIONAL_BAG_INFO_DTO;
 import static greencity.ModelUtils.TEST_ADDITIONAL_BAG_INFO_DTO_LIST;
@@ -123,6 +122,7 @@ import static greencity.ModelUtils.TEST_ORDER_DETAILS_INFO_DTO_LIST;
 import static greencity.ModelUtils.TEST_PAYMENT_LIST;
 import static greencity.ModelUtils.TEST_USER;
 import static greencity.ModelUtils.UPDATE_ORDER_PAGE_ADMIN_DTO;
+import static greencity.ModelUtils.getOrdersStatusCanceledDto;
 import static greencity.ModelUtils.getOrdersStatusFormedDto2;
 import static greencity.ModelUtils.getAddBonusesToUserDto;
 import static greencity.ModelUtils.getAdminCommentDto;
@@ -154,7 +154,6 @@ import static greencity.ModelUtils.getOrderStatusTranslations;
 import static greencity.ModelUtils.getOrderUserFirst;
 import static greencity.ModelUtils.getOrderWithoutPayment;
 import static greencity.ModelUtils.getOrdersStatusBROUGHT_IT_HIMSELFDto;
-import static greencity.ModelUtils.getOrdersStatusCanseledDto;
 import static greencity.ModelUtils.getOrdersStatusConfirmedDto;
 import static greencity.ModelUtils.getOrdersStatusDoneDto;
 import static greencity.ModelUtils.getOrdersStatusFormedDto;
@@ -172,13 +171,11 @@ import static greencity.ModelUtils.getTestOrderDetailStatusRequestDto;
 import static greencity.ModelUtils.getTestUser;
 import static greencity.ModelUtils.updateAllOrderPageDto;
 import static greencity.ModelUtils.updateOrderPageAdminDto;
-
 import static greencity.constant.ErrorMessage.EMPLOYEE_NOT_FOUND;
 import static greencity.constant.ErrorMessage.ORDER_CAN_NOT_BE_UPDATED;
 import static java.util.Collections.singletonList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.anyDouble;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.Mockito.any;
 import static org.mockito.Mockito.anyInt;
@@ -291,7 +288,7 @@ class UBSManagementServiceImplTest {
         PageableDto<CertificateDtoForSearching> certificateDtoForSearchingPageableDto =
             new PageableDto<>(certificateDtoForSearchings, certificateDtoForSearchings.size(), 0, 1);
         Page<Certificate> certificates1 = new PageImpl<>(certificates, pageable, certificates.size());
-        when(modelMapper.map(certificates.get(0), CertificateDtoForSearching.class))
+        when(modelMapper.map(certificates.getFirst(), CertificateDtoForSearching.class))
             .thenReturn(certificateDtoForSearching);
         when(certificateRepository.findAll(pageable)).thenReturn(certificates1);
         PageableDto<CertificateDtoForSearching> actual =
@@ -775,7 +772,7 @@ class UBSManagementServiceImplTest {
         User user = getTestUser();
         user.setRecipientName("Петро");
         user.setRecipientSurname("Петренко");
-        Order order = user.getOrders().get(0);
+        Order order = user.getOrders().getFirst();
         order.setOrderDate((LocalDateTime.of(2021, 5, 15, 10, 20, 5)));
 
         List<Payment> payment = new ArrayList<>();
@@ -895,7 +892,7 @@ class UBSManagementServiceImplTest {
         User user = getTestUser();
         user.setRecipientName("Петро");
         user.setRecipientSurname("Петренко");
-        Order order = user.getOrders().get(0);
+        Order order = user.getOrders().getFirst();
         order.setOrderDate((LocalDateTime.now()));
 
         List<Payment> payment = new ArrayList<>();
@@ -923,6 +920,29 @@ class UBSManagementServiceImplTest {
         verify(paymentRepository).findAllByOrderId(1L);
         verify(paymentRepository).saveAll(any());
         verify(orderRepository, times(2)).save(any());
+    }
+
+    @Test
+    void updateOrderDetailStatusToBroughtItHimselfTest() {
+        String email = "some@email.com";
+        Order saved = getOrder();
+        saved.setOrderStatus(OrderStatus.FORMED);
+        Order updated = getOrder();
+        updated.setOrderStatus(OrderStatus.BROUGHT_IT_HIMSELF);
+
+        when(paymentRepository.findAllByOrderId(saved.getId())).thenReturn(saved.getPayment());
+
+        OrderDetailStatusRequestDto detailStatusDto = OrderDetailStatusRequestDto.builder()
+            .orderStatus("BROUGHT_IT_HIMSELF")
+            .build();
+
+        OrderDetailStatusDto result = ubsManagementService.updateOrderDetailStatus(saved, detailStatusDto, email);
+
+        verify(eventService).saveEvent(OrderHistory.ORDER_BROUGHT_IT_HIMSELF, email, updated);
+        verify(notificationService).notifySelfPickupOrder(updated);
+        verify(orderRepository).save(updated);
+
+        assertEquals(OrderStatus.BROUGHT_IT_HIMSELF.name(), result.getOrderStatus());
     }
 
     @Test
@@ -1263,14 +1283,7 @@ class UBSManagementServiceImplTest {
         Order order = getOrder();
         Order orderDetailDto = getOrdersStatusFormedDto();
 
-        Bag tariffBagDto = ModelUtils.getTariffBag();
-        List<Bag> bagList = getBaglist();
-//<<<<<<< HEAD
-//        when(orderRepository.findById(1L)).thenReturn(Optional.ofNullable(orderDto));
-//=======
-
         when(bagRepository.findCapacityById(1)).thenReturn(1);
-//>>>>>>> dev
         when(orderRepository.getOrderDetails(1L)).thenReturn(Optional.ofNullable(orderDetailDto));
         when(paymentRepository.selectSumPaid(1L)).thenReturn(0L);
         when(orderRepository.findSumOfCertificatesByOrderId(1L)).thenReturn(0L);
@@ -1482,14 +1495,13 @@ class UBSManagementServiceImplTest {
 
     @Test
     void testSetOrderDetailsCanceled() {
-        Order order = getOrdersStatusCanseledDto();
+        Order order = getOrdersStatusCanceledDto();
         when(bagRepository.findCapacityById(1)).thenReturn(1);
         doNothing().when(orderDetailRepository).updateExporter(anyInt(), anyLong(), anyLong());
         doNothing().when(orderDetailRepository).updateConfirm(anyInt(), anyLong(), anyLong());
         when(orderRepository.getOrderDetails(anyLong()))
             .thenReturn(Optional.ofNullable(getOrdersStatusFormedDto()));
         when(orderRepository.getOrderDetails(1L)).thenReturn(Optional.ofNullable(getOrdersStatusFormedDto()));
-//        when(bagRepository.findById(1)).thenReturn(Optional.of(ModelUtils.getTariffBag()));
 
         ubsManagementService.setOrderDetail(order,
             UPDATE_ORDER_PAGE_ADMIN_DTO.getOrderDetailDto().getAmountOfBagsConfirmed(),
@@ -2015,7 +2027,7 @@ class UBSManagementServiceImplTest {
         when(orderStatusTranslationRepository.findAllBy()).thenReturn(getOrderStatusTranslations());
         when(
             orderPaymentStatusTranslationRepository.getById(1L))
-                .thenReturn(OrderPaymentStatusTranslation.builder().translationValue("name").build());
+            .thenReturn(OrderPaymentStatusTranslation.builder().translationValue("name").build());
         when(orderPaymentStatusTranslationRepository.getAllBy()).thenReturn(getOrderStatusPaymentTranslations());
         when(orderRepository.findById(6L)).thenReturn(Optional.of(order));
         when(receivingStationRepository.findAll()).thenReturn(getReceivingList());
@@ -2026,7 +2038,7 @@ class UBSManagementServiceImplTest {
         verify(certificateRepository).findCertificate(1L);
         verify(orderRepository, times(5)).findById(1L);
         verify(serviceRepository).findServiceByTariffsInfoId(1L);
-        verify(modelMapper).map(getBaglist().get(0), BagInfoDto.class);
+        verify(modelMapper).map(getBaglist().getFirst(), BagInfoDto.class);
         verify(orderStatusTranslationRepository).getOrderStatusTranslationById(6L);
         verify(orderPaymentStatusTranslationRepository).getById(1L);
         verify(receivingStationRepository).findAll();
@@ -2081,15 +2093,15 @@ class UBSManagementServiceImplTest {
         when(orderRepository.findById(1L)).thenReturn(Optional.ofNullable(getOrderForGetOrderStatusData2Test()));
         when(bagRepository.findAllActiveBagsByTariffsInfoId(1L)).thenReturn(getBaglist());
         when(serviceRepository.findServiceByTariffsInfoId(1L)).thenReturn(Optional.empty());
-        when(modelMapper.map(getBaglist().get(0), BagInfoDto.class)).thenReturn(bagInfoDto);
+        when(modelMapper.map(getBaglist().getFirst(), BagInfoDto.class)).thenReturn(bagInfoDto);
         when(orderStatusTranslationRepository.getOrderStatusTranslationById(6L))
             .thenReturn(Optional.ofNullable(getStatusTranslation()));
         when(
             orderPaymentStatusTranslationRepository.getById(1L))
-                .thenReturn(OrderPaymentStatusTranslation.builder().translationValue("name").build());
+            .thenReturn(OrderPaymentStatusTranslation.builder().translationValue("name").build());
         when(orderRepository.findById(6L)).thenReturn(Optional.of(order));
         when(receivingStationRepository.findAll()).thenReturn(getReceivingList());
-        when(modelMapper.map(getOrderForGetOrderStatusData2Test().getPayment().get(0), PaymentInfoDto.class))
+        when(modelMapper.map(getOrderForGetOrderStatusData2Test().getPayment().getFirst(), PaymentInfoDto.class))
             .thenReturn(getInfoPayment());
 
         ubsManagementService.getOrderStatusData(1L, "test@gmail.com");
@@ -2099,7 +2111,7 @@ class UBSManagementServiceImplTest {
         verify(certificateRepository).findCertificate(1L);
         verify(orderRepository, times(5)).findById(1L);
         verify(serviceRepository).findServiceByTariffsInfoId(1L);
-        verify(modelMapper).map(getBaglist().get(0), BagInfoDto.class);
+        verify(modelMapper).map(getBaglist().getFirst(), BagInfoDto.class);
         verify(orderStatusTranslationRepository).getOrderStatusTranslationById(6L);
         verify(orderPaymentStatusTranslationRepository).getById(1L);
         verify(receivingStationRepository).findAll();
@@ -2122,12 +2134,12 @@ class UBSManagementServiceImplTest {
         when(bagRepository.findAllActiveBagsByTariffsInfoId(1L)).thenReturn(getBaglist());
         when(serviceRepository.findServiceByTariffsInfoId(1L)).thenReturn(Optional.of(getService()));
         when(orderRepository.findById(1L)).thenReturn(Optional.ofNullable(getOrderForGetOrderStatusData2Test()));
-        when(modelMapper.map(getBaglist().get(0), BagInfoDto.class)).thenReturn(bagInfoDto);
+        when(modelMapper.map(getBaglist().getFirst(), BagInfoDto.class)).thenReturn(bagInfoDto);
         when(orderStatusTranslationRepository.getOrderStatusTranslationById(6L))
             .thenReturn(Optional.ofNullable(getStatusTranslation()));
         when(
             orderPaymentStatusTranslationRepository.getById(1L))
-                .thenReturn(OrderPaymentStatusTranslation.builder().translationValue("name").build());
+            .thenReturn(OrderPaymentStatusTranslation.builder().translationValue("name").build());
         when(orderRepository.findById(6L)).thenReturn(Optional.of(order));
         when(receivingStationRepository.findAll()).thenReturn(getReceivingList());
 
@@ -2137,7 +2149,7 @@ class UBSManagementServiceImplTest {
         verify(bagRepository).findAllActiveBagsByTariffsInfoId(1L);
         verify(orderRepository, times(5)).findById(1L);
         verify(serviceRepository).findServiceByTariffsInfoId(1L);
-        verify(modelMapper).map(getBaglist().get(0), BagInfoDto.class);
+        verify(modelMapper).map(getBaglist().getFirst(), BagInfoDto.class);
         verify(orderStatusTranslationRepository).getOrderStatusTranslationById(6L);
         verify(orderPaymentStatusTranslationRepository).getById(1L);
         verify(receivingStationRepository).findAll();
@@ -2159,10 +2171,10 @@ class UBSManagementServiceImplTest {
         when(bagRepository.findAllActiveBagsByTariffsInfoId(1L)).thenReturn(getBaglist());
         when(serviceRepository.findServiceByTariffsInfoId(1L)).thenReturn(Optional.of(getService()));
         when(orderRepository.findById(1L)).thenReturn(Optional.ofNullable(getOrderForGetOrderStatusData2Test()));
-        when(modelMapper.map(getBaglist().get(0), BagInfoDto.class)).thenReturn(bagInfoDto);
+        when(modelMapper.map(getBaglist().getFirst(), BagInfoDto.class)).thenReturn(bagInfoDto);
         when(
             orderPaymentStatusTranslationRepository.getById(1L))
-                .thenReturn(OrderPaymentStatusTranslation.builder().translationValue("name").build());
+            .thenReturn(OrderPaymentStatusTranslation.builder().translationValue("name").build());
         when(orderRepository.findById(6L)).thenReturn(Optional.of(order));
         when(receivingStationRepository.findAll()).thenReturn(getReceivingList());
 
@@ -2172,7 +2184,7 @@ class UBSManagementServiceImplTest {
         verify(bagRepository).findAllActiveBagsByTariffsInfoId(1L);
         verify(orderRepository, times(5)).findById(1L);
         verify(serviceRepository).findServiceByTariffsInfoId(1L);
-        verify(modelMapper).map(getBaglist().get(0), BagInfoDto.class);
+        verify(modelMapper).map(getBaglist().getFirst(), BagInfoDto.class);
         verify(orderStatusTranslationRepository).getOrderStatusTranslationById(6L);
         verify(orderPaymentStatusTranslationRepository).getById(1L);
         verify(receivingStationRepository).findAll();
@@ -2194,12 +2206,12 @@ class UBSManagementServiceImplTest {
         when(certificateRepository.findCertificate(1L)).thenReturn(getCertificateList());
         when(serviceRepository.findServiceByTariffsInfoId(1L)).thenReturn(Optional.of(getService()));
         when(orderRepository.findById(1L)).thenReturn(Optional.ofNullable(getOrderForGetOrderStatusData2Test()));
-        when(modelMapper.map(getBaglist().get(0), BagInfoDto.class)).thenReturn(bagInfoDto);
+        when(modelMapper.map(getBaglist().getFirst(), BagInfoDto.class)).thenReturn(bagInfoDto);
         when(orderStatusTranslationRepository.getOrderStatusTranslationById(6L))
             .thenReturn(Optional.ofNullable(getStatusTranslation()));
         when(
             orderPaymentStatusTranslationRepository.getById(1L))
-                .thenReturn(OrderPaymentStatusTranslation.builder().translationValue("name").build());
+            .thenReturn(OrderPaymentStatusTranslation.builder().translationValue("name").build());
         assertThrows(NotFoundException.class, () -> ubsManagementService.getOrderStatusData(1L, "test@gmail.com"));
     }
 
@@ -2477,15 +2489,15 @@ class UBSManagementServiceImplTest {
         when(bagRepository.findAllActiveBagsByTariffsInfoId(1L)).thenReturn(getBaglist());
         when(certificateRepository.findCertificate(1L)).thenReturn(getCertificateList());
         when(orderRepository.findById(1L)).thenReturn(Optional.ofNullable(getOrderForGetOrderStatusData2Test()));
-        when(modelMapper.map(getBaglist().get(0), BagInfoDto.class)).thenReturn(bagInfoDto);
+        when(modelMapper.map(getBaglist().getFirst(), BagInfoDto.class)).thenReturn(bagInfoDto);
         when(orderStatusTranslationRepository.getOrderStatusTranslationById(6L))
             .thenReturn(Optional.ofNullable(getStatusTranslation()));
         when(
             orderPaymentStatusTranslationRepository.getById(1L))
-                .thenReturn(OrderPaymentStatusTranslation.builder().translationValue("name").build());
+            .thenReturn(OrderPaymentStatusTranslation.builder().translationValue("name").build());
         when(
             orderPaymentStatusTranslationRepository.getAllBy())
-                .thenReturn(List.of(orderPaymentStatusTranslation));
+            .thenReturn(List.of(orderPaymentStatusTranslation));
 
         when(orderRepository.findById(6L)).thenReturn(Optional.of(order));
         when(receivingStationRepository.findAll()).thenReturn(getReceivingList());
@@ -2495,7 +2507,7 @@ class UBSManagementServiceImplTest {
         verify(bagRepository).findAllActiveBagsByTariffsInfoId(1L);
         verify(certificateRepository).findCertificate(1L);
         verify(orderRepository, times(5)).findById(1L);
-        verify(modelMapper).map(getBaglist().get(0), BagInfoDto.class);
+        verify(modelMapper).map(getBaglist().getFirst(), BagInfoDto.class);
         verify(orderStatusTranslationRepository).getOrderStatusTranslationById(6L);
         verify(orderPaymentStatusTranslationRepository).getById(
             1L);
@@ -2521,19 +2533,19 @@ class UBSManagementServiceImplTest {
         when(bagRepository.findAllActiveBagsByTariffsInfoId(1L)).thenReturn(getBaglist());
         when(certificateRepository.findCertificate(1L)).thenReturn(getCertificateList());
         when(orderRepository.findById(1L)).thenReturn(Optional.ofNullable(getOrderForGetOrderStatusData2Test()));
-        when(modelMapper.map(getBaglist().get(0), BagInfoDto.class)).thenReturn(bagInfoDto);
+        when(modelMapper.map(getBaglist().getFirst(), BagInfoDto.class)).thenReturn(bagInfoDto);
         when(orderStatusTranslationRepository.getOrderStatusTranslationById(6L))
             .thenReturn(Optional.ofNullable(getStatusTranslation()));
         when(
             orderPaymentStatusTranslationRepository.getById(1L))
-                .thenReturn(OrderPaymentStatusTranslation.builder().translationValue("name").build());
+            .thenReturn(OrderPaymentStatusTranslation.builder().translationValue("name").build());
 
         when(orderStatusTranslationRepository.findAllBy())
             .thenReturn(list);
 
         when(
             orderPaymentStatusTranslationRepository.getAllBy())
-                .thenReturn(List.of(orderPaymentStatusTranslation));
+            .thenReturn(List.of(orderPaymentStatusTranslation));
 
         when(orderRepository.findById(6L)).thenReturn(Optional.of(order));
         when(receivingStationRepository.findAll()).thenReturn(getReceivingList());
@@ -2544,7 +2556,7 @@ class UBSManagementServiceImplTest {
         verify(bagRepository).findAllActiveBagsByTariffsInfoId(1L);
         verify(certificateRepository).findCertificate(1L);
         verify(orderRepository, times(5)).findById(1L);
-        verify(modelMapper).map(getBaglist().get(0), BagInfoDto.class);
+        verify(modelMapper).map(getBaglist().getFirst(), BagInfoDto.class);
         verify(orderStatusTranslationRepository).getOrderStatusTranslationById(6L);
         verify(orderPaymentStatusTranslationRepository).getById(
             1L);
@@ -2684,7 +2696,7 @@ class UBSManagementServiceImplTest {
     @Test
     void checkEmployeeForOrderTest() {
         User user = getTestUser();
-        Order order = user.getOrders().get(0);
+        Order order = user.getOrders().getFirst();
         order.setOrderStatus(OrderStatus.CANCELED).setTariffsInfo(getTariffsInfo());
         Employee employee = getEmployee();
         List<Long> tariffsInfoIds = new ArrayList<>();
@@ -2697,15 +2709,24 @@ class UBSManagementServiceImplTest {
 
     @Test
     void updateOrderStatusToExpected() {
-        ubsManagementService.updateOrderStatusToExpected();
-        verify(orderRepository).updateOrderStatusToExpected(OrderStatus.CONFIRMED.name(),
-            OrderStatus.ON_THE_ROUTE.name(),
-            LocalDate.now());
+        ZoneId expectedZoneId = ZoneId.of("Europe/Kiev");
+        LocalDate expectedLocalDate = LocalDate.of(2019, 1, 2);
+
+        try (MockedStatic<LocalDate> localDate = Mockito.mockStatic(LocalDate.class)) {
+            localDate.when(() -> LocalDate.now(expectedZoneId))
+                .thenReturn(expectedLocalDate);
+
+            ubsManagementService.updateOrderStatusToExpected();
+
+            verify(orderRepository).updateOrderStatusToExpected(OrderStatus.CONFIRMED.name(),
+                OrderStatus.ON_THE_ROUTE.name(),
+                expectedLocalDate);
+        }
     }
 
     @ParameterizedTest
     @MethodSource("provideOrdersWithDifferentInitialExportDetailsForUpdateOrderExportDetails")
-    void updateOrderExportDetailsSettingForDifferentInitialExportDetailsTest(Order order, String expectedHistoryEvent) {
+    void updateOrderExportDetailsSettingForDifferentInitialExportDetailsTest(Order order) {
         Employee employee = getEmployee();
         List<ReceivingStation> receivingStations = List.of(getReceivingStation());
         ExportDetailsDtoUpdate testDetails = getExportDetailsRequest();
