@@ -28,7 +28,6 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.web.multipart.MultipartFile;
-
 import greencity.ModelUtils;
 import greencity.dto.violation.AddingViolationsToUserDto;
 import greencity.dto.violation.UpdateViolationToUserDto;
@@ -86,7 +85,7 @@ class ViolationServiceImplTest {
 
         violationService.getAllViolations(Pageable.unpaged(), 1L, "violationDate", SortingOrder.ASC);
         assertEquals(violationService.getAllViolations(Pageable.unpaged(), 1L, "violationDate", SortingOrder.ASC)
-            .getUserViolationsDto().getPage().get(0).getViolationDate(), ModelUtils.getViolation().getViolationDate());
+            .getUserViolationsDto().getPage().getFirst().getViolationDate(), ModelUtils.getViolation().getViolationDate());
     }
 
     @Test
@@ -98,7 +97,7 @@ class ViolationServiceImplTest {
     void deleteViolationFromOrderResponsesNotFoundWhenNoViolationInOrder() {
         Employee employee = ModelUtils.getEmployee();
         when(employeeRepository.findByUuid("abc")).thenReturn(Optional.of(employee));
-        when(violationRepository.findByOrderId(1l)).thenReturn(Optional.empty());
+        when(violationRepository.findByOrderId(1L)).thenReturn(Optional.empty());
         Assertions.assertThrows(NotFoundException.class, () -> violationService.deleteViolation(1L, "abc"));
         verify(violationRepository, times(1)).findByOrderId(1L);
         verify(employeeRepository, times(1)).findByUuid(anyString());
@@ -123,7 +122,7 @@ class ViolationServiceImplTest {
     void checkAddUserViolation(OrderStatus orderStatus) {
         Employee employee = ModelUtils.getEmployee();
         User user = ModelUtils.getTestUser();
-        Order order = user.getOrders().get(0);
+        Order order = user.getOrders().getFirst();
         order.setUser(user);
         order.setOrderStatus(orderStatus);
         TariffsInfo tariffsInfo = ModelUtils.getTariffInfo();
@@ -145,7 +144,7 @@ class ViolationServiceImplTest {
         Violation violation) {
         Employee employee = ModelUtils.getEmployee();
         User user = ModelUtils.getTestUser();
-        Order order = user.getOrders().get(0);
+        Order order = user.getOrders().getFirst();
         order.setUser(user);
         order.setOrderStatus(orderStatus);
         TariffsInfo tariffsInfo = ModelUtils.getTariffInfo();
@@ -251,13 +250,12 @@ class ViolationServiceImplTest {
             .build();
 
         order.setTariffsInfo(ModelUtils.getTariffsInfo());
-        when(orderRepository.findById(anyLong())).thenReturn(Optional.ofNullable(order));
+        when(orderRepository.findById(anyLong())).thenReturn(Optional.of(order));
         when(employeeRepository.findByEmail(anyString())).thenReturn(Optional.ofNullable(employee));
         when(employeeRepository.findTariffsInfoForEmployee(anyLong()))
             .thenReturn(employee.getTariffInfos().stream().map(TariffsInfo::getId).collect(Collectors.toList()));
-        assertThrows(BadRequestException.class, () -> {
-            violationService.addUserViolation(add, new MultipartFile[2], "test@gmail.com");
-        });
+        assertThrows(BadRequestException.class,
+            () -> violationService.addUserViolation(add, new MultipartFile[2], "test@gmail.com"));
         verify(orderRepository, times(2)).findById(anyLong());
         verify(employeeRepository).findByEmail(anyString());
     }
@@ -266,7 +264,7 @@ class ViolationServiceImplTest {
     void testAddUserViolationWithMultipartFiles() {
         Employee employee = ModelUtils.getEmployee();
         User user = ModelUtils.getTestUser();
-        Order order = user.getOrders().get(0);
+        Order order = user.getOrders().getFirst();
         order.setOrderStatus(OrderStatus.DONE);
         order.setUser(user);
         TariffsInfo tariffsInfo = ModelUtils.getTariffInfo();
@@ -292,7 +290,7 @@ class ViolationServiceImplTest {
     void testAddUserViolationWithoutMultipartFiles() {
         Employee employee = ModelUtils.getEmployee();
         User user = ModelUtils.getTestUser();
-        Order order = user.getOrders().get(0);
+        Order order = user.getOrders().getFirst();
         order.setOrderStatus(OrderStatus.DONE);
         order.setUser(user);
         TariffsInfo tariffsInfo = ModelUtils.getTariffInfo();
@@ -317,7 +315,7 @@ class ViolationServiceImplTest {
     void testUpdateViolationWhenImagesIsNotEmpty() {
         Employee employee = ModelUtils.getEmployee();
         User user = ModelUtils.getTestUser();
-        Order order = user.getOrders().get(0);
+        Order order = user.getOrders().getFirst();
         Violation violation = ModelUtils.getViolation();
         violation.setImages(Arrays.asList("img", "test"));
         MockMultipartFile[] multipartFiles = new MockMultipartFile[2];
@@ -335,7 +333,7 @@ class ViolationServiceImplTest {
     void testUpdateViolationWhenMultipartFilesAreEmpty() {
         Employee employee = ModelUtils.getEmployee();
         User user = ModelUtils.getTestUser();
-        Order order = user.getOrders().get(0);
+        Order order = user.getOrders().getFirst();
         Violation violation = ModelUtils.getViolation();
         violation.setImages(Arrays.asList("img", "test"));
         MockMultipartFile[] multipartFiles = new MockMultipartFile[0];
@@ -352,7 +350,7 @@ class ViolationServiceImplTest {
     void testUpdateViolationWhenImagesToDeleteAreNull() {
         Employee employee = ModelUtils.getEmployee();
         User user = ModelUtils.getTestUser();
-        Order order = user.getOrders().get(0);
+        Order order = user.getOrders().getFirst();
         Violation violation = ModelUtils.getViolation();
         violation.setImages(Arrays.asList("img", "test"));
         MockMultipartFile[] multipartFiles = new MockMultipartFile[0];
